manifests/onedev/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: onedev-internal-gateway
  namespace: onedev
  annotations:
    cert-manager.io/cluster-issuer: omnicloud
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      hostname: onedev.omnilium.local
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: onedev-internal-tls
