manifests/onedev/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: onedev-route
  namespace: onedev
spec:
  parentRefs:
    - name: onedev-internal-gateway
      port: 22
    # - name: onedev-external-gateway
    #   port: 22
  hostnames:
    - onedev.omnilium.local
    # - git.omni.ms
  rules:
    - backendRefs:
        - name: onedev
          port: 22
