manifests/onedev/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: onedev-route
  namespace: onedev
spec:
  parentRefs:
    - name: onedev-internal-gateway
      port: 22
    - name: onedev-external-gateway
      port: 22
  rules:
    - backendRefs:
        - name: onedev
          port: 22
